# PhantomLedger

./: .gitignore  CMakeLists.txt  Makefile  README.md  \  ]  main.py  notes.txt  pyproject.toml
.cache/clangd/index/: accounts.hpp.6B24F3B34ED2AF51.idx  archetypes.hpp.87243FB8FAFE0398.idx  calendar.hpp.9394259AB13C7037.idx  device.hpp.A68A8BD33A279BF4.idx  event.hpp.31546CBC65409676.idx  factory.hpp.A4DF3DAFC82B4AD3.idx  identity.hpp.BBD4F8652FA81083.idx  installment_terms.hpp.03569F719CEAF6A5.idx  insurance.hpp.AFAECED6A6E60E70.idx  insurance_ledger.hpp.5C8E87FBBBC57426.idx  landlord.hpp.2C889FDBD16752DC.idx  layout.hpp.D63D8B263FDE2C34.idx  ledger.hpp.9FFB45F255021EF9.idx  loan_terms_ledger.hpp.68C18E1E88F1F549.idx  loc_accrual.hpp.3A4B3F90DC793AA0.idx  lookup.hpp.40D83BDD11335E5F.idx  lookup.hpp.D8F71B5678B3C263.idx  names.hpp.646709AD5EBD483A.idx  names.hpp.6FC2A082ED2C58BB.idx  obligation_stream.hpp.85CB1856198B2AE0.idx  portfolio.hpp.8B70E13A9B53A4C7.idx  predicates.hpp.82AC30D50E2B20C3.idx  predicates.hpp.82E23FE5AF48EC42.idx  predicates.hpp.E995C3D7B13A260D.idx  protection.hpp.EF32F3A842F43E1D.idx  rounding.hpp.34394CFECFD1C843.idx  test_calendar.cpp.07D87554A2D806D8.idx  test_channels.cpp.AB2B9456CA27E899.idx  test_validate.cpp.0A2A22799B0879FC.idx  types.hpp.172E79CC422AC164.idx  types.hpp.59EF78E0120D2E4A.idx  types.hpp.9A75F877067FA0B1.idx
common/: business_accounts.py  calendar_cache.py  channels.py  config.py  externals.py  family_accounts.py  ids.py  landlord_types.py  persona_names.py  rng.py  run.py  schema.py  temporal.py  timeline.py  timeutil.py  transactions.py  types.py  validate.py
common/config/: __init__.py  _dates.py  generation.py  world.py
common/config/population/: __init__.py  accounts.py  balances.py  counterparties.py  credit.py  family.py  government.py  hubs.py  insurance.py  landlords.py  merchants.py  personas.py  population.py  social.py  totals.py
common/config/runtime/: __init__.py  output.py  window.py
common/config/simulation/: __init__.py  events.py  fraud.py  graph.py  infra.py  recurring.py
common/math/: __init__.py  numeric.py  probability.py
common/random/: __init__.py  factory.py  rng.py  seedbank.py  seeding.py
emit/: __init__.py  accounts.py  infra.py  merchants.py  people.py  pii.py  tg_csv.py  transfers.py
entities/: accounts.py  counterparties.py  credit_cards.py  fraudsters.py  landlords.py  merchants.py  models.py  people.py  personas.py  pii.py
entities/credit_cards/: __init__.py  issuance.py  models.py  policy.py
entities/products/: __init__.py  auto_loan.py  builder.py  card_account.py  event.py  insurance.py  mortgage.py  portfolio.py  schedule_helpers.py  student_loan.py  tax_profile.py
export/: __init__.py  csv_io.py  registry.py
export/aml/: __init__.py  edges.py  exporter.py  identity_aml.py  minhash.py  sar.py  schema.py  shared.py  vertices.py
export/mule_ml/: __init__.py  edges.py  party.py  transfer.py
export/standard/: __init__.py  accounts.py  external_accounts.py  infra.py  merchants.py  people.py  pii.py  tables.py  transfers.py
include/phantomledger/app/: cli.hpp  options.hpp  parsers.hpp  progress.hpp  setup.hpp
include/phantomledger/channels/: names.hpp  predicates.hpp  taxonomy.hpp
include/phantomledger/clearing/: ledger.hpp
include/phantomledger/cli/: args.hpp  parsers.hpp
include/phantomledger/counterparties/: accounts.hpp
include/phantomledger/crypto/: blake2b.hpp
include/phantomledger/devices/: identity.hpp
include/phantomledger/encoding/: device.hpp  (+6 more)
infra/: _pool.py  devices.py  ipaddrs.py  models.py  ring_infra.py  routing.py  shared.py  txn_infra.py
math_models/: __init__.py  amount_model.py  amounts.py  counterparty_evolution.py  counts.py  dormancy.py  graph.py  momentum.py  paycheck_cycle.py  seasonal.py  timing.py
pipeline/: generate_all.py  generate_ledger.py  result.py  stages.py  state.py
pipeline/stages/: __init__.py  entities.py  infra.py  output.py  output_tables.py  requests.py  sorting.py  summary.py  transfers.py
relationships/: family.py  recurring.py  social.py
relationships/family/: __init__.py  generator.py  household_links.py  households.py  links.py  models.py  network.py  support.py
relationships/recurring/: __init__.py  employment.py  growth.py  lease.py  models.py  policy.py  shared.py  state.py  types.py
src/: main.cpp
src/app/: cli.cpp  main.cpp  progress.cpp  setup.cpp
src/clearing/: ledger.cpp
src/cli/: args.cpp
src/diagnostics/: logger.cpp  spending_stats.cpp
src/exporter/: csv.cpp  labels.cpp
src/pipeline/: simulate.cpp
src/run/: progress.cpp  setup.cpp
tests/: CMakeLists.txt  test_calendar.cpp  test_cdf.cpp  test_channels.cpp  test_counterparties.cpp  test_ids.cpp  test_ledger.cpp  test_math.cpp  test_minhash_parity.cpp  test_pcg64.cpp  test_personas.cpp  test_pipeline_e2e.cpp  test_rng.cpp  test_seed.cpp  test_spending.cpp  test_support.hpp  test_validate.cpp  test_value_types.cpp
transfers/: aggregate.py  balances.py  credit_cards.py  day_to_day.py  factory.py  family_transfers.py  fraud.py  government.py  insurance.py  legit.py  obligations.py  txns.py
transfers/credit_cards/: __init__.py  generator.py  models.py  params.py  schedule.py  statement.py
transfers/day_to_day/: __init__.py  build.py  channels.py  dynamics.py  engine.py  generate.py  merchant.py  models.py  payments.py  state.py
transfers/family/: __init__.py  allowances.py  engine.py  generator.py  gifts.py  grandparent.py  helpers.py  inheritance.py  models.py  siblings.py  spouse.py  support.py  tuition.py
transfers/fraud/: __init__.py  camouflage.py  engine.py  injector.py  models.py  policy.py  ring_plan.py  rings.py  run_context.py  schedule.py  typologies.py  typology_classic.py  typology_common.py  typology_funnel.py  typology_invoice.py  typology_layering.py  typology_structuring.py
transfers/legit/: __init__.py  accumulator.py  atm.py  balances.py  builder.py  credit_card_lifecycle.py  daily_transfers.py  deposit_split.py  family_transfers.py  models.py  paydays.py  plans.py  recurring.py  self.py  subscriptions.py
(+735 files in other folders)
